--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           </tr>
           <tr>
             <td>
-              <input type="number" id="event-day" maxlength="2" value="1" />
+              <input type="number" id="event-day" maxlength="2" value="1" min="1" max="31" />
             </td>
             <td>
-              <input type="number" id="event-month" maxlength="2" value="1" />
+              <input type="number" id="event-month" maxlength="2" value="1" min="1" max="12"  />
             </td>
             <td>
-              <input type="number" id="event-year" maxlength="4" value="2021" />
+              <input type="number" id="event-year" maxlength="4" value="2021" min="2020" max="2023" />
             </td>
           </tr>
         </table>
